force-app/main/default/objects/Non_Prod_Settings__c/Non_Prod_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>These settings are maintained for non production environments</description>
    <label>Non Production Settings</label>
</CustomObject>