force-app/main/default/objects/Non_Prod_Settings__c/fields/Account_Whitelist__c.field-meta.xml
<CustomField>
    <fullName>Account_Whitelist__c</fullName>
    <description>A comma delimited set of Accounts to be whitelisted in DML operations</description>
    <inlineHelpText>A comma delimited set of Accounts to be whitelisted in DML operations</inlineHelpText>
    <label>Account Whitelist</label>
    <type>TextArea</type>
</CustomField>