force-app/main/default/objects/Non_Prod_Settings__c/fields/Enable_Account_Whitelisting__c.field-meta.xml
<CustomField>
    <fullName>Enable_Account_Whitelisting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If enabled, only the accounts in the Account Whitelist field will be permitted through any DML operation</description>
    <inlineHelpText>If enabled, only the accounts in the Account Whitelist field will be permitted through any DML operation</inlineHelpText>
    <label>Enable Account Whitelisting</label>
    <type>Checkbox</type>
</CustomField>