force-app/main/default/objects/Non_Prod_Settings__c/fields/MockCallouts__c.field-meta.xml
<CustomField>
    <fullName>MockCallouts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mock callouts if needed so we display the LWC with mock responses. Enable this flag to mock the responses in lower environments</description>
    <label>MockCallouts</label>
    <type>Checkbox</type>
</CustomField>