force-app/main/default/objects/Non_Prod_Settings__c/fields/SSO_Not_Configured__c.field-meta.xml
<CustomField>
    <fullName>SSO_Not_Configured__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the nonprod environment has not been configured for SSO, check this box to suppress error messages and token handling logic</description>
    <label>SSO Not Configured</label>
    <type>Checkbox</type>
</CustomField>